# ROS2BagFileParsing

./: .gitignore  README.md
dev_ws/src/dev_cpp_pkg/: CMakeLists.txt  package.xml
dev_ws/src/dev_cpp_pkg/msg/: GpsRx.msg
dev_ws/src/dev_cpp_pkg/src/: dev_cpp_node.cpp
rosbag2_test_data/: metadata.yaml  rosbag2_2020_03_13-23_47_56.db3
